Closed Bug 99562 Opened 25 years ago Closed 25 years ago

nsHttpTransaction should own the nsIProgressEventSink proxy instead of nsHttpConnection

Categories

(Core :: Networking: HTTP, defect, P3)

defect

Tracking

()

VERIFIED FIXED
mozilla0.9.5

People

(Reporter: darin.moz, Assigned: darin.moz)

References

Details

(Whiteboard: fixed-on-trunk)

Attachments

(1 file)

nsIProgressEventSink should be implemented by nsHttpTransaction instead of nsHttpConnection. this is necessary to support pipelining, in which requests from different threads could be satisfied by the same connection.
Status: NEW → ASSIGNED
Priority: -- → P3
Target Milestone: --- → mozilla0.9.5
Blocks: 93054
revised summary
Summary: nsIProgressEventSink should be implemented by nsHttpTransaction instead of nsHttpConnection → nsHttpTransaction should own the nsIProgressEventSink proxy instead of nsHttpConnection
Comment on attachment 49300 [details] [diff] [review] v1.0 makes nsHttpConnection not own the nsIProgressEventSink proxy r=gagan
Attachment #49300 - Flags: review+
Comment on attachment 49300 [details] [diff] [review] v1.0 makes nsHttpConnection not own the nsIProgressEventSink proxy sr=mscott
Attachment #49300 - Flags: superreview+
Whiteboard: ready-to-land
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Whiteboard: ready-to-land → fixed-on-trunk
gagan: can you mark this bug verified if you are satisfied the code change is in?
verifying as fixed.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: