fixes bug 99562 "nsHttpTransaction should own the nsIProgressEventSink proxy instead of nsHttpConnection" r=gagan, sr=mscott